--- a/src/backend/Flowertrack.Api/appsettings.Development.json
+++ b/src/backend/Flowertrack.Api/appsettings.Development.json
@@ -2,7 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=54322;Database=postgres;Username=postgres;Password=postgres"
+  },
+  "Supabase": {
+    "Url": "http://127.0.0.1:54321",
+    "Key": "your-anon-key-here"
   }
 }
