--- a/src/backend/Flowertrack.Api/Flowertrack.Api.csproj
+++ b/src/backend/Flowertrack.Api/Flowertrack.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>ff614fa1-f147-4dfe-bcf4-03454abe398e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
