Usunięcie testów i logiki domenowej
Usunięto testy jednostkowe dla klas domenowych, takich jak `Ticket`, `Machine`, `OrganizationUser`, `ServiceUser`, `MaintenanceInterval` i `TicketNumber`. Usunięto również klasy `OrganizationUser` i `ServiceUser` wraz z ich logiką biznesową, zdarzeniami domenowymi oraz metodami audytowymi w `AuditableEntity`. Wprowadzono zmiany w `OrganizationsController.cs` i pliku projektu testowego, dodając folder `ValueObjects`.

--- a/src/backend/Flowertrack.Domain.Tests/Flowertrack.Domain.Tests.csproj
+++ b/src/backend/Flowertrack.Domain.Tests/Flowertrack.Domain.Tests.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Flowertrack.Domain\Flowertrack.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
