--- a/src/backend/Core/Flowertrack.Application/Flowertrack.Application.csproj
+++ b/src/backend/Core/Flowertrack.Application/Flowertrack.Application.csproj
@@ -5,6 +5,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+    <PackageReference Include="MediatR" Version="13.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Supabase" Version="1.1.1" />
   </ItemGroup>
 
